test/spec_vectors/simd_bit_shift/fail/module_31.wat
(module (func $i8x16.shl-arg-empty (result v128) (i8x16.shl)))